Add jSpecify node.io.modbus.server.domain package.